Creando estructura basica encriptador

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cifrado</title>
 </head>
 <body>
-    
+    <input type="text" id="textoCifrar">
+    <textarea name="resultado" id="textoDesencriptado" cols="30" rows="10"></textarea>
+    <button type="button" id="botonEncriptar">Encriptar</button>
+    <button type="button" id="botonDesncriptar">Desencriptar</button>
+    <button type="button" id="botonCopiar">Copiar</button>
 </body>
 </html>
