--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cifrado</title>
+    <title>Encriptador</title>
 </head>
 <body>
     <input type="text" id="textoCifrar">
-    <textarea name="resultado" id="textoDesencriptado" cols="30" rows="10"></textarea>
+    <textarea name="resultado" id="textoEncriptado" cols="30" rows="10"></textarea>
     <button type="button" id="botonEncriptar">Encriptar</button>
     <button type="button" id="botonDesncriptar">Desencriptar</button>
     <button type="button" id="botonCopiar">Copiar</button>
