--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <button type="button" id="botonEncriptar">Encriptar</button>
     <button type="button" id="botonDesncriptar">Desencriptar</button>
     <button type="button" id="botonCopiar">Copiar</button>
+
+    <script src="app.js"></script>
 </body>
 </html>
