Se corriguieron de idioma algunas palabras

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="botones">
             <textarea name="resultado" id="textoEncriptado" class="textarea" cols="30" rows="10" placeholder="Ingresa el texto"></textarea>
             <div class="contenedor-botones">
-                <p id="condiciones">Lowercase letter only, no accents</p>
+                <p id="condiciones">Solo letras minúsculas y sin acentos</p>
                 <button type="button" id="botonEncriptar" onclick="encriptar()">Encriptar</button>
                 <button type="button" id="botonDesencriptar" onclick="desencriptar()">Desencriptar</button>
                 
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p class="credits">Developed by: <a href="https://github.com/Rafa05231/ChallengeEncriptador" target="_blank">RafaDev</a></p>
+        <p class="credits">Desarrollado por: <a href="https://github.com/Rafa05231/ChallengeEncriptador" target="_blank">RafaDev</a></p>
     </footer>
    
     <script src="app.js"></script>
