Se corrigio un error tipografico

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="ResultadoEncriptado">
 
             <div class="textEncriptado">
-                <textarea name="" id="texto-encriptado" cols="30" rows="10" placeholder="Aqui se mostrata el texto encriptado o desencriptado"></textarea>
+                <textarea name="" id="texto-encriptado" cols="30" rows="10" placeholder="Aqui se mostrara el texto encriptado o desencriptado"></textarea>
             </div>
             <div id="contenedor-subtitulo">
                 <h3>No se encontro ningun mensaje</h3>
